syntax = "proto3";
package ssc.chainlet;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/sagaxyz/ssc/x/chainlet/types";

// Params defines the parameters for the module.
message Params {
  bool chainletStackProtections = 1;
  string nEpochDeposit = 2;
  bool automaticChainletUpgrades = 3;
  int64 automaticChainletUpgradeInterval = 4;
  // Delay launch to give validators time to set the consumer key
  google.protobuf.Duration launchDelay = 5
      [ (gogoproto.stdduration) = true, (gogoproto.nullable) = false ];
  uint64 maxChainlets = 6;
  // Allow launching chainlets as CCV consumers
  bool enableCCV = 7;
  // Minimum height difference when performing a breaking upgrade.
  uint64 upgradeMinimumHeightDelta = 8;
  uint64 upgradeTimeoutHeight = 9;
  uint64 upgradeTimeoutTime = 10;
  google.protobuf.Timestamp upgradeTimeoutTime = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"upgrade_timeout_time\""
  ];
}
